# soui.backup

./: .gitattributes  .gitignore  .gitmodules  3.0规划.txt  Build.bat  BuildAll_x86.bat  CMakeLists.txt  README.md  Render-Test.sln  common.pri  cpy-cfg.pri  make(dll-win32-vs08).bat  make(dll-win32-vs10).bat  soui.08.sln  soui.pro  soui.sln  soui2015.sln  soui相关优化列表.xls  todo_list.xlsx  属性列表.xls  开发者名单.csv  新版本32+64位编译.txt
components/imgdecoder-png/: CMakeLists.txt  decoder-apng.cpp  decoder-apng.h  imgdecoder-png.cpp  imgdecoder-png.h  imgdecoder-png.pro  imgdecoder-png.vcproj
components/log4z/: CMakeLists.txt  log4z.cpp  log4z.h  log4z.pro
components/render-gdi/: CMakeLists.txt  GradientFillHelper.cpp  GradientFillHelper.h  render-api.cpp  render-gdi.cpp  render-gdi.h  render-gdi.pro  render-gdi.vcproj  resource.h  stdafx.h
demos/: CMakeLists.txt  demos.pro
demos/360/: 360.cpp  360.vcproj  CMakeLists.txt  MainDlg.cpp  MainDlg.h  SAnimImg.cpp  SAnimImg.h  STabCtrl2.cpp  stdafx.h
demos/360Preview/: 360Preview.cpp  360Preview.rc  360Preview.vcproj  CMakeLists.txt  MainDlg.cpp  MainDlg.h  SImageSwitcher.cpp  SImageSwitcher.h  SToolbox.cpp  SToolbox.h  readme.txt  resource.h  stdafx.h
demos/BesLyric/: BSMessageBox.h  BesLyric.cpp  BesLyric.rc  CMakeLists.txt  FileHelper.cpp  FileHelper.h  LyricMaker.cpp  LyricMaker.h  LyricPlayer.cpp  LyricPlayer.h  MainDlg.cpp  MainDlg.h  MusicPlayer.cpp  MusicPlayer.h  resource.h  stdafx.h
demos/DropDemo/: CMakeLists.txt  DragDropHandle.cpp  DragDropHandle.h  DropDemo.pro  DropDemo.rc  DropDemo.vcproj  MainWnd.cpp  MainWnd.h  ReadMe.txt  SFileList.cpp  SFileList.h  SPathBar.cpp  SPathBar.h  WinFileIconSkin.hpp  main.cpp  resource.h  stdafx.h
demos/FrogPlay/: AVPlayer.cpp  AVPlayer.h  CMakeLists.txt  FilesHelp.cpp  FilesHelp.h  FrogPlay.cpp  FrogPlay.pro  FrogPlay.vcproj  MainDlg.cpp  MainDlg.h  PlayListAdapter.h  RealWndDlg.cpp  RealWndDlg.h  RealWndDlg_URL.h  SouiRealWndHandler.cpp  SouiRealWndHandler.h  TipWnd.cpp  TipWnd.h  resource.h  stdafx.cpp  stdafx.h  taskbarlist3-i.h
demos/MultiLangs/: CMakeLists.txt  MainDlg.cpp  MainDlg.h  MultiLangs.cpp  MultiLangs.pro  MultiLangs.vcproj  resource.h  stdafx.h
demos/PCManager/: CMakeLists.txt  MainDlg.cpp  MainDlg.h  PCManager.cpp  PCManager.pro  readme.txt  resource.h
demos/QQLogin/: CMakeLists.txt  GroupChatFrame.cpp  GroupChatFrame.h  MainDlg.cpp  MainDlg.h  MenuWrapper.cpp  MenuWrapper.h  QQLogin.cpp  QQLogin.pro  QQLogin.vcproj  build_res.bat  resource.h  stdafx.h  utils.h
demos/QQMain/: CMakeLists.txt  QQMain.pro  QQMain.vcproj  main.cpp  resource.h  stdafx.h
demos/SLogViewer/: CMakeLists.txt  EditConfigDlg.cpp  EditConfigDlg.h  FileHelper.h  FilterDlg.cpp  FilterDlg.h  FindDlg.cpp  FindDlg.h  LogParser.cpp  LogParser.h  MainDlg.cpp  MainDlg.h  SColorizeText.cpp  SColorizeText.h  SLogAdapter.cpp  SLogAdapter.h  SLogViewer.cpp  SLogViewer.pro  SLogViewer.rc  SLogViewer.vcproj  droptarget.h  readme.txt  resource.h  stdafx.h
demos/SoTool/: 2UnicodeHandler.cpp  2UnicodeHandler.h  CMakeLists.txt  CWindowHelperHander.cpp  CWindowHelperHander.h  CalcMd5Handler.cpp  CalcMd5Handler.h  CodeLineCounter.cpp  CodeLineCounter.h  CodeLineCounterHandler.cpp  CodeLineCounterHandler.h  DragDrop.h  FileMap.cpp  FileMap.h  FolderHander.cpp  FolderHander.h  FolderScanHandler.cpp  FolderScanHandler.h  IconvWorker.cpp  IconvWorker.h  ImageMergerHandler.cpp  ImageMergerHandler.h  MD5.cpp  MD5.h  MainDlg.cpp  MainDlg.h  SCaptureButton.cpp  SCaptureButton.h  SEdit2.cpp  SEdit2.h  SFolderList.cpp  SFolderList.h  SImgCanvas.cpp  SImgCanvas.h  STabCtrlEx.cpp  STabCtrlEx.h  STreeList.cpp  STreeList.h  SaveToIcon.h  SoTool.cpp  (+8 more)
demos/SouiEditor/: Adapter.cpp  Adapter.h  CDebug.h  CMakeLists.txt  CNewGuid.h  CmdLine.h  DesignerView.cpp  DesignerView.h  DragDownMgr.h  FileHelper.h  Global.h  MainDlg.cpp  MainDlg.h  ResManger.cpp  ResManger.h  SDesignerRoot.cpp  SDesignerRoot.h  SImageBtnEx.cpp  SImageBtnEx.h  SImageEx.cpp  SImageEx.h  SImgCanvas.cpp  SImgCanvas.h  SListBoxDrop.h  SMoveWnd.cpp  SMoveWnd.h  SRotateWindow.h  SSwitch.cpp  SSwitch.h  Scintilla.h  ScintillaWnd.cpp  ScintillaWnd.h  SouiEditor.cpp  SouiEditor.pro  SouiEditor.rc  SouiEditor.vcxproj  SouiEditor.vcxproj.filters  SouiRealWndHandler.cpp  SouiRealWndHandler.h  SysdataMgr.cpp  (+12 more)
demos/TIMDemo/: ApproverLayout.cpp  ApproverLayout.h  CMakeLists.txt  CacheHandle.cpp  CacheHandle.h  DownAttachmentLayout.cpp  DownAttachmentLayout.h  FileFolderHelper.cpp  FileFolderHelper.h  MainWnd.cpp  MainWnd.h  MenuWrapper.cpp  MsgToolTipWnd.cpp  MsgToolTipWnd.h  ReadMe.txt  SQLiteBase.cpp  SQLiteBase.h  SharkWinHandle.hpp  TIMDemo.pro  TrayHandle.cpp  TrayHandle.h  Typedef.h  main.cpp  resource.h  stdafx.h  stdafx.h.cpp  timdemo.rc  utils.cpp
demos/TXMgr/: CMakeLists.txt  GSAnimButton.cpp  GSAnimButton.h  GSSkin.cpp  GSSkin.h  GSTabCtrl.cpp  GSTabCtrl.h  MainDlg.cpp  MainDlg.h  SAnimImg.cpp  SAnimImg.h  SRocketAnimator.cpp  SRocketAnimator.h  TXMgr.cpp  TXMgr.pro  TXMgr.vcproj  TrayDlg.cpp  TrayDlg.h  resource.h  stdafx.h
demos/ThreeClearGame/: CMakeLists.txt  MainDlg.cpp  MainDlg.h  MyHelper.cpp  MyHelper.h  NetAdapter.cpp  NetAdapter.h  NetMatrix.cpp  NetMatrix.h  ThreeClearGame.cpp  ThreeClearGame.pro  ThreeClearGame.rc  ThreeClearGame.vcproj  readme.txt  resource.h  stdafx.h  stdafx.h.cpp
demos/UiEditor/: Adapter.h  CDebug.h  CMakeLists.txt  CNewGuid.h  DesignerView.cpp  DesignerView.h  DlgAbout.cpp  DlgAbout.h  DlgCreatePro.cpp  DlgCreatePro.h  DlgFontSelect.cpp  DlgFontSelect.h  DlgInput.cpp  DlgInput.h  DlgNewLayout.cpp  DlgNewLayout.h  DlgNewSkin.cpp  DlgNewSkin.h  DlgSkinSelect.cpp  DlgSkinSelect.h  DlgStyleManage.cpp  DlgStyleManage.h  MainDlg.cpp  MainDlg.h  SDesignerRoot.cpp  SDesignerRoot.h  SImageSwitcher.cpp  SImageSwitcher.h  SImgCanvas.cpp  SListBoxDrop.h  SMoveWnd.cpp  SMoveWnd.h  SRotateWindow.h  SSwitch.cpp  SToolbox.cpp  SToolbox.h  UIEditor.cpp  UIEditor.rc  UiEditor.pro  (+7 more)
third-part/: CMakeLists.txt  readme.txt  third-part.pro  third-part.sln
utilities/: CMakeLists.txt  resource.h  utilities.pro  utilities.rc  utilities.vcproj
(+6381 files in other folders)
