LINK_DIRECTORIES(${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
add_subdirectory(PCManager)
add_subdirectory(360)
add_subdirectory(360Preview)
add_subdirectory(souispy)
add_subdirectory(demo)
add_subdirectory(mclistview_demo)
add_subdirectory(QQLogin)
add_subdirectory(SoTool)
add_subdirectory(UiEditor)
add_subdirectory(souitest)
add_subdirectory(VUI)