LINK_DIRECTORIES(${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
add_subdirectory(PCManager)
add_subdirectory(360)
add_subdirectory(360Preview)
add_subdirectory(souispy)
add_subdirectory(demo)
add_subdirectory(mclistview_demo)
add_subdirectory(QQLogin)
add_subdirectory(SoTool)
add_subdirectory(UiEditor)
add_subdirectory(souitest)
add_subdirectory(VUI)
add_subdirectory(BesLyric)
add_subdirectory(QQMain)
add_subdirectory(FrogPlay)
add_subdirectory(MultiLangs)
add_subdirectory(TXMgr)
add_subdirectory(SLogViewer)
add_subdirectory(SouiEditor)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
if(COMPILER_SUPPORTS_CXX11)
	add_subdirectory(TIMDemo)
	message(STATUS "build TIMDemo ON")
else()
	message(STATUS "build TIMDemo OFF")
endif()
