add_subdirectory(zlib)
add_subdirectory(png)
add_subdirectory(skia)
add_subdirectory(lua-52)
add_subdirectory(mhook)
add_subdirectory(smiley)
add_subdirectory(gtest)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
if(COMPILER_SUPPORTS_CXX11)
	add_subdirectory(7z)
	message(STATUS "build 7z ON")
else()
	message(STATUS "build 7z OFF")
endif()