# 
# SOUI cmake配置文件
#
add_subdirectory(imgdecoder-gdip)
add_subdirectory(imgdecoder-png)
add_subdirectory(imgdecoder-stb)
add_subdirectory(imgdecoder-wic)


add_subdirectory(render-gdi)
add_subdirectory(render-skia)
add_subdirectory(resprovider-zip)

add_subdirectory(translator)
add_subdirectory(ScriptModule-Lua)

add_subdirectory(log4z)